# taxi-finder

./: CMakeLists.txt
maps/: cars.json  map_1.json
src/: car.cpp  car.h  config.h  generate.h  main.cpp  map.cpp  map.h  thread_safe_queue.h  types.h  user.cpp  user.h
